fix: main menu letter spacing

--- a/museum/styles.scss
+++ b/museum/styles.scss
@@ -201,9 +201,8 @@ header{
         &-link{
             font-weight: 200;
             // font-size: 22px;
-            // letter-spacing: 2px;
             font-size: 23px;
-            letter-spacing: 1.65px;
+            letter-spacing: 2px;
             color: var(--white-text);
         }
         &-link:hover,&-link:active{
